[package]
name = "selendra-service"
version = "0.1.4"
authors = ["Selendra info@selendra.org"]
edition = "2018"

[dependencies]
# External Crates
futures = "0.3.17"
hex-literal = "0.3.4"
tracing = "0.1.29"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
kvdb = "0.10.0"
kvdb-rocksdb = { version = "0.14.0", optional = true }
async-trait = "0.1.51"
lru = "0.7.0"

# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "master" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }

# Selendra
selendra-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
selendra-overseer = { path = "../overseer" }
selendra-client = { path = "../client", default-features = false, optional = true }
selendra-parachain = { path = "../../modules/parachain" }
selendra-primitives = { path = "../../primitives" }
selendra-node-primitives = { path = "../primitives" }
selendra-rpc = { path = "../rpc" }
selendra-subsystem = { package = "selendra-node-subsystem", path = "../subsystem" }
selendra-node-subsystem-util = { path = "../subsystem-util" }
selendra-runtime-parachains = { path = "../../modules/parachain/runtime" }
selendra-node-network-protocol = { path = "../network/protocol" }

# Selendra Runtimes
selendra-runtime = { path = "../../runtime/selendra"}

# Selendra Subsystems
selendra-approval-distribution = { path = "../network/approval-distribution", optional = true }
selendra-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
selendra-availability-distribution = { path = "../network/availability-distribution", optional = true }
selendra-availability-recovery = { path = "../network/availability-recovery", optional = true }
selendra-collator-protocol = { path = "../network/collator-protocol", optional = true }
selendra-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
selendra-gossip-support = { path = "../network/gossip-support", optional = true }
selendra-network-bridge = { path = "../network/bridge", optional = true }
selendra-node-collation-generation = { path = "../collation-generation", optional = true }
selendra-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
selendra-node-core-av-store = { path = "../core/av-store", optional = true }
selendra-node-core-backing = { path = "../core/backing", optional = true }
selendra-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
selendra-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
selendra-node-core-chain-api = { path = "../core/chain-api", optional = true }
selendra-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
selendra-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
selendra-node-core-provisioner = { path = "../core/provisioner", optional = true }
selendra-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
selendra-statement-distribution = { path = "../network/statement-distribution", optional = true }

# Evm
pallet-evm = { path = "../../vendors/frontier/frame/evm"}
pallet-ethereum = { path = "../../vendors/frontier/frame/ethereum"}
fc-db = { path = "../../vendors/frontier/client/db"}
fc-rpc = { path = "../../vendors/frontier/client/rpc"}
fc-consensus = { path = "../../vendors/frontier/client/consensus"}
fc-rpc-core = { path = "../../vendors/frontier/client/rpc-core"}
fc-mapping-sync = { path = "../../vendors/frontier/client/mapping-sync"}

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"
selendra-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }

[features]
default = ["db", "full-node"]

db = [
	"service/db"
]

full-node = [
	"selendra-node-core-av-store",
	"selendra-node-core-approval-voting",
	"selendra-availability-bitfield-distribution",
	"selendra-availability-distribution",
	"selendra-availability-recovery",
	"selendra-client",
	"selendra-collator-protocol",
	"selendra-dispute-distribution",
	"selendra-gossip-support",
	"selendra-network-bridge",
	"selendra-node-collation-generation",
	"selendra-node-core-backing",
	"selendra-node-core-bitfield-signing",
	"selendra-node-core-candidate-validation",
	"selendra-node-core-chain-api",
	"selendra-node-core-chain-selection",
	"selendra-node-core-dispute-coordinator",
	"selendra-node-core-provisioner",
	"selendra-node-core-runtime-api",
	"selendra-statement-distribution",
	"selendra-approval-distribution",
	"kvdb-rocksdb"
]

light-node = []
runtime-benchmarks = ["selendra-runtime/runtime-benchmarks"]
try-runtime = ["selendra-runtime/try-runtime"]
disputes = ["selendra-node-core-dispute-coordinator/disputes"]
